Minor enhancements and fixes

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
     </build>
     <dependencies>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>21.0</version>
+        </dependency>
+        <dependency>
             <artifactId>junit-dataprovider</artifactId>
             <groupId>com.tngtech.java</groupId>
             <version>1.12.0</version>
